# CodeWave-text-editor

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  main  main.c
.deps/: main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
