AC_INIT([CodeWave-text-editor], [0.0.1], [studybhaskar654@gmail.com])
AC_CONFIG_SRCDIR([main.c])  # Replace 'main.c' with the name of your main file
AM_INIT_AUTOMAKE
# Checks for programs
AC_PROG_CC

# Checks for libraries

# Checks for header files

# Checks for typedefs, structures, and compiler characteristics

# Checks for library functions


AC_CONFIG_FILES([Makefile])
AC_OUTPUT